# my-flask-templates

./: config.py  manage.py  pyproject.toml  register.py  setup.py  start_gunicorn.py
application/: __init__.py  config.py  register.py
application/core/: commands.py  extensions.py  response.py
application/core/extensions/: __init__.py  jwt.py  resend.py  siwadoc.py
application/models/: user.py
apps/: __init__.py
apps/api/: __init__.py  auth.py  captcha.py  user.py
apps/views/: __init__.py  index.py  register.py
apps/views/src/css/: base.css  index.css  login.css  register.css  showcase.css
apps/views/src/js/: base.js  fas.js  index.js  login.js  register.js  toast.js
apps/views/templates/: base.html  function.html  login.html  register.html  showcase.html
core/: commands.py  response.py
core/extensions/: __init__.py  api.py  cors.py  csrf.py  db.py  ext.py  jwt.py  mail.py  migrate.py  redis.py  resend.py  siwadoc.py  swagger.py
database/models/: user.py
migrations/versions/: 126f297de465_add_the_user_table.py
schema/: __init__.py
schema/request/: BaseSchema.py  UserSchema.py
schema/response/: BaseResponse.py  __init__.py
schema/types/: __init__.py  bp.py
utils/: tools.py
