[project]
name = "my-flask-templates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.1",
    "python-dotenv>=1.1.0",
    "flask-migrate>=4.1.0",
    "flask-siwadoc>=0.2.2",
    "flask-cors>=6.0.0",
    "flask-mail>=0.10.0",
    "gunicorn>=23.0.0",
]
